--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    " __comment under unix: start": "PORT=9001 node server/server.js",
+    "start": "set PORT=9001 && node server/server.js",
+    "client": "ng serve",
+    "server": "npm start",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,9 +27,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
+    "underscore": "^1.8.3",
     "xml2js": "^0.4.19",
     "zone.js": "^0.8.14"
   },
@@ -37,6 +44,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/underscore": "^1.8.4",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
