--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/impress": "^0.5.29",
+    "angular-hotkeys": "^1.7.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
+    "impress.js": "^0.6.0",
     "rxjs": "^5.4.2",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.19",
