--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^4.2.4",
     "@types/impress": "^0.5.29",
     "angular-hotkeys": "^1.7.0",
+    "angular2-hotkeys": "^2.0.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
