--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "impress.js": "^0.6.0",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.4.2",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.19",
