--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/underscore": "^1.8.4",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
