--- a/package.json
+++ b/package.json
@@ -15,18 +15,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/flex-layout": "^2.0.0-beta.9",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^7.0.1",
+    "@angular/core": "^7.0.1",
+    "@angular/forms": "^7.0.1",
+    "@angular/http": "^7.0.1",
+    "@angular/platform-browser": "^7.0.1",
+    "@angular/platform-browser-dynamic": "^7.0.1",
+    "@angular/router": "^7.0.1",
     "@types/impress": "^0.5.29",
     "angular-hotkeys": "^1.7.0",
     "angular2-hotkeys": "^2.0.3",
@@ -37,21 +32,26 @@
     "hammerjs": "^2.0.8",
     "impress.js": "^0.6.0",
     "material-design-icons": "^3.0.1",
-    "rxjs": "^5.4.2",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.19",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.8",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cdk": "^7.0.2",
+    "@angular/cli": "^7.0.3",
+    "@angular/common": "^7.0.1",
+    "@angular/compiler": "^7.0.1",
+    "@angular/compiler-cli": "^7.0.1",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/language-service": "^7.0.1",
+    "@angular/material": "^7.0.2",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/underscore": "^1.8.4",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -61,8 +61,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.2"
+    "typescript": "^3.1.3"
   }
 }
