--- a/package.json
+++ b/package.json
@@ -65,6 +65,6 @@
     "rxjs-compat": "^6.3.3",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^3.1.3"
+    "typescript": "3.1.6"
   }
 }
